chore: add swagger for login endpoint
